		- The class of the imported .jar file only has to extend the "Library" class and does not need to be named "CustomLibrary"
		  BUT that means I have to use a third party library :(
		- Relative paths (*/lib.jar for example) can either be: 
			The folder of a script file that is being executed 
			OR the folder of the script host, if no file is being loaded

1.9.12:
	- DevScript can now property handle the null variable $null. (="undefined")
	- Added an explanation for the "wait" command
	- Added an overloaded command "push [value] [array] [index]" to insert values at a specified index into an array
	- Added some tips (On how to create "classes", for example) and improved the tutorials
	- The variable PI should now be recognized as an actual number
	- More examples
	- Fixed a profanity in an error message
	- Division by zero now throws a readable error message (It previously resultet in "Infinity" which was not recognized as a number before, causing confusing errors
	- Added an ascii raycast example to show off the script capabilities (Take a look! Examples -> demos -> raycast)
	- Added a snake game as example
	- Fixed an issue where 0.000 == 0 would return false
	- Added a "keyPressed" event function to the devscript editor library so you can create simple games.
	- Improved performance
	- More minor fixes

1.9.11:
	- Fixed try command issue with loops
	- Added sqrt function (Square root)
	- Added sin, cos and tan commands (They obviously act like sin, cos and tan functions in math, arguments in degrees)
	- Added PI constant as variable
	
1.9.10:
	- You can add an array element by adding any value to an array ($array + "newElement") <- This will add a new element to an array. A short version for the "push" command
	- You can concatenate two arrays using the "+" command now
	- You can use a tenary command for shorter if statements:
		println ($condition ? "Condition is true" "Condition is false")
	- Enhanced if statements. Instead of writing this: